# OpENer

./: .cdtproject  .clang-format  .cppcheck-config  .cproject  .gitattributes  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .project  .travis.yml  AUTHORS  CMakeCache.txt  CMakeLists.txt  CPPUTEST_ASAN_COMPATIBILITY.md  ChangeLog  ChangeLog.txt  OpENer_Cip_Security.soc  README  README.md  SANITIZER_GUIDE.md  TODO  TODO.txt  build_with_sanitizers.sh  license.txt  opener.doxyfile  run_sanitizer_tests.sh  sonar-project.properties  uncrustify.cfg
source/: CMakeLists.txt  opener.doxyfile  opener.doxyfile.in
source/buildsupport/: CodeCoverage.cmake  OpENer.cmake  OpENer_CIP_Object_generator.cmake  OpENer_Tests.cmake  OpENer_function_checks.cmake
source/buildsupport/LM3S8962/: OpENer_PLATFORM_INCLUDES.cmake
source/buildsupport/MINGW/: OpENer_PLATFORM_INCLUDES.cmake
source/buildsupport/POSIX/: OpENer_PLATFORM_INCLUDES.cmake
source/buildsupport/Toolchain/: Toolchain-EABI-ARM-Generic.cmake
source/buildsupport/WIN32/: OpENer_PLATFORM_INCLUDES.cmake
source/contrib/msinttypes/: README  inttypes.h
source/doc/: opener.bib
source/doc/STM32/: LwIP_HTTP_Server_Netconn_RTOS_OpENer.patch  OpENer STM32 Paths and Symbols.xml
source/doc/coding_rules/src/: opener_coding_rules.tex
source/src/: CMakeLists.txt  opener_api.h  trace.h  typedefs.h
source/src/api/: opener_api.h
source/src/cip/: CMakeLists.txt  appcontype.c  appcontype.h  cipassembly.c  cipassembly.h  cipclass3connection.c  cipclass3connection.h  cipcommon.c  cipcommon.h  cipconnectionmanager.c  cipconnectionmanager.c.bak  cipconnectionmanager.h  cipconnectionobject.c  cipconnectionobject.h  cipdlr.c  cipdlr.h  cipelectronickey.c  cipelectronickey.h  cipepath.c  cipepath.h  ciperror.h  cipethernetlink.c  cipethernetlink.h  cipidentity.c  cipidentity.h  cipioconnection.c  cipioconnection.h  ciplldpdatatable.c  ciplldpdatatable.h  ciplldpmanagement.c  ciplldpmanagement.h  cipmessagerouter.c  cipmessagerouter.h  cipqos.c  cipqos.h  cipstring.c  cipstring.h  cipstringi.c  cipstringi.h  ciptcpipinterface.c  (+3 more)
source/src/cip/cip_security/: CMakeLists.txt  cert_req.c  cert_req.h  cert_write.c  cert_write.h  certificatemanagement.c  cipsecurity.c  cipsecurity.h  ethernetipsecurity.c  ethernetipsecurity.h  gen_key.c  gen_key.h
source/src/cip/connectionmanager/: CMakeLists.txt  cipforwardopen.c  cipforwardopen.h
source/src/cip_objects/: CMakeLists.txt
source/src/core/: trace.h  typedefs.h
source/src/enet_encap/: CMakeLists.txt  cpf.c  cpf.h  encap.c  encap.h  endianconv.c  endianconv.h
source/src/ports/: CMakeLists.txt  devicedata.h.in  generic_networkhandler.c  generic_networkhandler.h  networkhandler.h  opener_error.h  opener_user_conf_common.h  socket_timer.c  socket_timer.h  udp_protocol.c  udp_protocol.h
source/src/ports/LM3S8962/: CMakeLists.txt  README  archnw.h  basiccip.c  config.h  flashmgr.c  flashmgr.h  main.c  networkhandler.c  networkhandler.h  stubs.c
source/src/ports/LM3S8962/sample_application/: CMakeLists.txt  main.c  opener_user_conf.h
source/src/ports/MINGW/: CMakeLists.txt  Makefile  main.c  networkconfig.c  networkconfig.h  networkhandler.c  networkhandler.h  opener_error.c  platform_network_includes.h
source/src/ports/POSIX/: CMakeLists.txt  main.c  networkconfig.c  networkconfig.h  networkhandler.c  networkhandler.h  opener_error.c  platform_network_includes.h
source/src/ports/STM32/: CMakeLists.txt  networkconfig.c  networkconfig.h  networkhandler.c  opener.c  opener.h  opener_error.c  platform_network_includes.h
source/src/ports/WIN32/: CMakeLists.txt  main.c  networkconfig.c  networkconfig.h  networkhandler.c  networkhandler.h  opener_error.c  platform_network_includes.h
source/src/ports/nvdata/: CMakeLists.txt  conffile.c  conffile.h  nvdata.c  nvdata.h  nvqos.c  nvqos.h  nvtcpip.c  nvtcpip.h
source/src/utils/: CMakeLists.txt  doublylinkedlist.c  doublylinkedlist.h  enipmessage.c  enipmessage.h  mtrandom.c  random.c  random.h  xorshiftrandom.c  xorshiftrandom.h
source/tests/: CMakeLists.txt  CTestCustom.cmake  OpENerTests.cpp  OpENerTests.h  callback_mock.cpp  check_assert.h  main.cpp  security_tests.cpp  test_assert.h
source/tests/cip/: CMakeLists.txt  cipcommontests.cpp  cipconnectionmanagertest.cpp  cipconnectionobjecttest.cpp  cipelectronickey.cpp  cipelectronickeyformattest.cpp  cipelectronickeytest.cpp  cipepathtest.cpp  cipstringtests.cpp  connectionmanagertest.cpp
source/tests/cip/connectionmanager/: CMakeLists.txt  cipforwardopentest.cpp
source/tests/enet_encap/: CMakeLists.txt  encaptest.cpp  endianconvtest.cpp
source/tests/ports/: CHECKENCAPSULATIONINACTIVITY_TESTS.md  CMakeLists.txt  check_encapsulation_inactivity_tests.cpp  socket_timer_tests.cpp  udp_protocol_tests.cpp
source/tests/utils/: CMakeLists.txt  MTRandomTests.cpp  doublylinkedlistTests.cpp  randomTests.cpp  xorshiftrandomtests.cpp
src/: CMakeLists.txt  opener_api.h  trace.h  typedefs.h
src/cip/: CMakeLists.txt  appcontype.c  appcontype.h  cipassembly.c  cipassembly.h  cipclass3connection.c  cipclass3connection.h  cipcommon.c  cipcommon.h  cipconnectionmanager.c  cipconnectionmanager.h  ciperror.h  cipethernetlink.c  cipethernetlink.h  cipidentity.c  cipidentity.h  cipioconnection.c  cipioconnection.h  cipmessagerouter.c  cipmessagerouter.h  ciptcpipinterface.c  ciptcpipinterface.h  ciptypes.h
src/enet_encap/: CMakeLists.txt  cpf.c  cpf.h  encap.c  encap.h  endianconv.c  endianconv.h
src/ports/: CMakeLists.txt
src/ports/POSIX/: CMakeLists.txt
src/ports/POSIX/sample_application/: sampleapplication.c
src/ports/WIN32/: CMakeLists.txt
src/ports/WIN32/sample_application/: CMakeLists.txt  opener_user_conf.h
src/ports/platform-pc/: CMakeLists.txt  main.c  networkhandler.c  networkhandler.h  opener_user_conf.h  stubs.c
src/ports/platform-pc/sample_application/: CMakeLists.txt  opener_user_conf.h
src/tests/: CMakeLists.txt  main.cpp
src/tests/utils/: CMakeLists.txt  MTRandomTests.cpp  xorshiftrandomtests.cpp
src/utils/: CMakeLists.txt  mtrandom.h  random.c
(+57 files in other folders)
