#######################################
# Add subdirectories                  #
#######################################
add_subdirectory(cip)
add_subdirectory(enet_encap)
add_subdirectory(ports)

#######################################
# Add source files                    #
#######################################


